
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Diego Alvarez S.", email = "dialvarezs@gmail.com"},
]
dependencies = [
    "fastapi>=0.95.2",
    "uvicorn[standard]>=0.22.0",
    "sqlalchemy>=2.0.15",
    "alembic>=1.11.1",
    "psycopg>=3.1.9",
    "pydantic[dotenv]>=1.10.8",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "ruff>=0.0.270",
]

[tool.pdm.scripts]
_.env_file = ".env"
alembic = "alembic {args}"
start = "uvicorn main:app --reload"
_black = "black ."
_ruff = "ruff . --fix"
format = {"composite" = ["_black", "_ruff"]}

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
select = ["E", "F", "I", "N"]